--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,8 +3,7 @@ set -g @catppuccin_flavour 'mocha'
 # install and run tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'hallazzang/tmux-reset'
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
@@ -13,21 +12,17 @@ bind r source-file ~/.tmux.conf
 set-option -sa terminal-overrides ",xterm*:Tc"
 set -g mouse on
 
-set -s set-clipboard on
-
 # don't rename windows automatically
 set-option -g allow-rename off
 
 # enable vim motions
 setw -g mode-keys vi
 
-# move x clipboard into tmux paste buffer
-#bind C-p run "tmux set-buffer \"$(xclip -o)\"; tmux paste-buffer"
-# move tmux copy buffer into x clipboard
-#bind C-y run "tmux save-buffer - | xclip -i"
+# copy to the clipboard in copy mode with y
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # set -s set-clipboard on
-# set -s set-clipboard external
+set -s set-clipboard external
 # set -s set-clipboard off
 
 # Start windows and panes at 1, not 0
@@ -42,6 +37,3 @@ bind % split-window -h -c "#{pane_current_path}"
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
-
-
-
