config update for june 2025

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,7 +19,10 @@ set-option -g allow-rename off
 setw -g mode-keys vi
 
 # copy to the clipboard in copy mode with y
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+bind-key -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+bind-key -T copy-mode-vi 'Enter' send-keys -X copy-pipe-and-cancel "xclip -in -selection clipboard"
+
+# bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
 
 # set -s set-clipboard on
 set -s set-clipboard external
